# evserver

./: .gitignore  CMakeLists.txt  README.md  tcp-client.py
app/: CMakeLists.txt
app/src/: logger.cpp  logger.h  main.cpp  tcp_server.h
lib/: CMakeLists.txt
scripts/: build.sh  configure.sh
